<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addArticleFragment">

    <include
        android:id="@+id/include4"
        layout="@layout/fragment_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBanner"
                android:layout_width="43dp"
                android:layout_height="50dp"
                android:layout_marginTop="95dp"
                android:layout_marginEnd="12dp"
                app:backgroundTint="#74000000"
                app:icon="@android:drawable/ic_menu_camera"
                app:iconGravity="textEnd"
                app:iconPadding="1dp"
                app:iconTint="#FFFFFF"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageView
                android:id="@+id/ivBackgroundRound"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:minHeight="100dp"
                android:layout_marginTop="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/bg_round_top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="150dp"
                android:paddingTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/titleLinear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:clipToPadding="true"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/add_article_title"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTitle"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="-10dp"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:hint="@string/hint_title"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/confidentialLinear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:clipToPadding="true"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/tvConfidential"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/add_article_confidential"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTitle"
                        android:textSize="24sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/confidentialSwitch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:textColorLink="@color/colorAccent" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/RecentLinear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:clipToPadding="true"
                    android:orientation="horizontal"
                    android:paddingTop="0dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/tvRecent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/add_article_recent"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTitle"
                        android:textSize="24sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/recentSwitch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:textColorLink="@color/colorAccent" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/topicLinear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:clipToPadding="true"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/tvTopic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/add_article_topic"
                        android:textColor="@color/colorTitle"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:id="@+id/ddTopic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/bg_8dp_corners"
                        android:elevation="4dp"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/dynamic_spinner"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:clipToPadding="true"
                            android:padding="5dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/textLinear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:clipToPadding="true"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/tvTitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/add_article_text"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTitle"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/etText"
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/bg_8dp_corners"
                        android:elevation="4dp"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:padding="5dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/bg_8dp_corners"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:elevation="4dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/add_article_confirm"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnAddFile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/bg_8dp_corners"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:elevation="4dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/add_article_attach_file"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@android:color/white"
        app:tint="@null"
        app:srcCompat="@drawable/left_arrow_white"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>