...
                    android:fontFamily="@font/open_sans_extrabold"
                    android:text="@string/recent"
                    android:textColor="@color/colorTitle"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRecent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:elevation="5dp"
                    android:fadeScrollbars="false"
                    android:radius="10dp"
...
