...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btnDelete"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="#FFF"
                        android:elevation="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
...
